# pyDmdReader

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  performance.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: pylint.yml  win_tests.yml
examples/: performance.py  plotdata.py  read_by_id.py
pyDmdReader/: __init__.py  _api.py  _channel_config.py  _dmd_reader.py  _loader.py  _structures.py  data_types.py  types.py
tests/: test_datatypes.py  test_loadfile.py  test_loadfile_array.py  test_loadfile_dataframe.py  test_loadfile_reduced.py
tests/data/: duplicate_names.dmd  oxy711.dmd  oxy721.dmd  simple.dmd  syncasync.dmd
