[build-system]
requires = [
    "wheel",
    "setuptools",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project]
name = "pyDmdReader"
license = {file = "LICENSE"}

maintainers = [
    {name = "Matthias Straka", email = "matthias.straka@dewetron.com"},
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dynamic = ['version', 'description']

[project.urls]
homepage = "https://www.dewetron.com/"
documentation = "https://github.com/DEWETRON/pyDmdReader/wiki"
source = "https://github.com/DEWETRON/pyDmdReader"
download = "https://github.com/DEWETRON/pyDmdReader/releases"
tracker = "https://github.com/DEWETRON/pyDmdReader/issues"
