[project]
name = "pyDmdReader"
description = "Python module to read Dewetron Oxygen DMD files"
version = "7.3.2"
license = {file = "LICENSE"}

maintainers = [
    {name = "Matthias Straka", email = "matthias.straka@dewetron.com"},
    {name = "Gunther Laure", email = "gunther.laure@dewetron.com"},
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
homepage = "https://www.dewetron.com/"
documentation = "https://github.com/DEWETRON/pyDmdReader/wiki"
source = "https://github.com/DEWETRON/pyDmdReader"
download = "https://github.com/DEWETRON/pyDmdReader/releases"
tracker = "https://github.com/DEWETRON/pyDmdReader/issues"

[build-system]
requires = [
    "wheel",
    "setuptools",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]
